// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render empty tooltips 1`] = `
<div
  id="tooltip"
/>
`;

exports[`should not render empty tooltips 2`] = `
<div
  id="tooltip"
/>
`;

exports[`should render 1`] = `
<Fragment>
  <div
    aria-describedby="tooltip-1"
    id="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    tabIndex={0}
  />
  <div
    aria-hidden={true}
    className="tooltip-inner hidden"
    id="tooltip-1"
    role="tooltip"
  >
    <span
      id="overlay"
    />
  </div>
</Fragment>
`;

exports[`should render 2`] = `
<Fragment>
  <div
    aria-describedby="tooltip-1"
    id="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    tabIndex={0}
  />
  <EscKeydownHandler
    onKeydown={[Function]}
  >
    <TooltipPortal>
      <ScreenPositionFixer
        ready={false}
      >
        <Component />
      </ScreenPositionFixer>
    </TooltipPortal>
  </EscKeydownHandler>
</Fragment>
`;
